# cs4700-project

./: .gitignore  CMakeLists.txt  README.md
src/: kernels.c  kernels.h  pgm.c  pgm.h  proc_2d.cu  proc_cpu.c  proc_sep.cu  proc_seq.cu  util.c  util.h
src/images/correct/: r11-1024.pgm  r3-1024.pgm  r5-1024.pgm  r7-1024.pgm  r9-1024.pgm
